--- a/app/templates/LecturerModule/LecturerDashboard.html
+++ b/app/templates/LecturerModule/LecturerDashboard.html
@@ -30,20 +30,28 @@
             <h2>EduSense</h2>
             <p>Lecturer Navigation Panel</p>
             <ul>
-                <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i>
+                <li><i class="fa-solid fa-house" style="color: #6F251B;"></i>
                     <a href="{{url_for('main.lecturer_dashboard')}}">Dashboard</a></li>
                 <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i>
-                    <a href="">Register Units</a></li>
-                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i>
-                    <a href="">Post Attendance Records</a></li>
-                <li><i class="fa-solid fa-book" style="color:#6F251B;"></i>
-                    <a href="">Post Student Grades</a></li>
+                    <a href="{{url_for('main.lecregunits')}}">Register Units</a></li>
+                <li><i class="fa-brands fa-flipboard" style="color:#6F251B;"></i>    
+                    <a href="{{ url_for('main.inprogressunitslec') }}">In Progress Units</a></li>
                 <li><i class="fa-solid fa-person" style="color:#6F251B;"></i>
-                    <a href="">Mentor Login</a></li>
+                    <a href="">Mentor Information</a></li>
             </ul>
         </div>
         <div class="main-content">
-                <h1>Welcome</h1>
+            <!-- Flash messages -->
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    <div class="flash-messages">
+                        {% for category, message in messages %}
+                            <div class="flash {{ category }}">{{ message }}</div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            {% endwith %}
+                <h1>Welcome, {{lecturer.full_name}}</h1>
                 <div class="personal-info">
                     <h2>Lecturer Information</h2>
                 <div class="profile-info">
