--- a/app/templates/LecturerModule/InProgressUnits.html
+++ b/app/templates/LecturerModule/InProgressUnits.html
@@ -232,9 +232,11 @@
                                         <td>{{ unit.year_offered }}</td>
                                         <td>{{ unit.semester_offered }}</td>
                                         <td>
-                                            <button type="button" class="view-grades-btn">
-                                                <i class="fa-solid fa-book" style="color:#ccc;"></i> Manage Unit Information
-                                            </button>
+                                            <a href="{{ url_for('main.manageunitlec', unit_id=unit.unit_id) }}">
+                                                <button type="button" class="view-grades-btn">
+                                                    <i class="fa-solid fa-book" style="color:#ccc;"></i> Manage Unit Information
+                                                </button>
+                                            </a>                                            
                                         </td>
                                     </tr>
                                 {% else %}
