Managed to start working onfetching of student attendance but can't figure out why it's not fetching from the db

--- a/app/templates/LecturerModule/ManageUnit.html
+++ b/app/templates/LecturerModule/ManageUnit.html
@@ -74,6 +74,35 @@
     font-size: 20px;
     cursor: pointer;
 }
+.flash {
+            width: 50%;
+            padding: 10px;
+            margin: 20px 0 10px 0;
+            border-radius: 5px;
+            font-size: 16px;
+            z-index: 10;
+            position: relative;
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        .flash.success {
+            background-color: #28a745;
+            color: white;
+        }
+
+        .flash.error {
+            background-color: #dc3545;
+            color: white;
+        }
+
+        .flash.warning {
+            background-color: #ffc107;
+            color: black;
+        }
+
+        .flash-messages {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
