This commit includes bug fixes to attendance fetching and saving of student grades

--- a/app/templates/LecturerModule/InProgressUnits.html
+++ b/app/templates/LecturerModule/InProgressUnits.html
@@ -232,7 +232,7 @@
                                         <td>{{ unit.year_offered }}</td>
                                         <td>{{ unit.semester_offered }}</td>
                                         <td>
-                                            <a href="{{ url_for('main.manageunitlec', unit_id=unit.unit_id) }}">
+                                            <a href="{{ url_for('main.manageunitslec', unit_id=unit.unit_id) }}">
                                                 <button type="button" class="view-grades-btn">
                                                     <i class="fa-solid fa-book" style="color:#ccc;"></i> Manage Unit Information
                                                 </button>
