--- a/app/templates/LecturerModule/ViewAttendanceUnits.html
+++ b/app/templates/LecturerModule/ViewAttendanceUnits.html
@@ -183,12 +183,14 @@
             <h2>EduSense</h2>
             <p>Student Navigation Panel</p>
             <ul>
-                <li><i class="fa-solid fa-house" style="color: #6F251B;" class="active"></i>
-                    <a href="{{ url_for('main.student_dashboard') }}">Dashboard</a></li>
+                <li><i class="fa-solid fa-house" style="color: #6F251B;"></i>
+                    <a href="{{url_for('main.lecturer_dashboard')}}">Dashboard</a></li>
+                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i>
+                    <a href="{{url_for('main.lecregunits')}}">Register Units</a></li>
                 <li><i class="fa-brands fa-flipboard" style="color:#6F251B;"></i>    
-                    <a href="{{ url_for('main.available_units') }}">Unit Registration</a></li>
-                <li><i class="fa-brands fa-flipboard" style="color:#6F251B;"></i>    
-                    <a href="{{ url_for('main.inprogressunits') }}">In Progress Units</a></li>
+                    <a href="{{ url_for('main.inprogressunitslec') }}">In Progress Units</a></li>
+                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i>
+                    <a href="{{url_for('main.viewattendanceunits')}}">Manage Attendance</a></li>
                 <li><i class="fa-solid fa-person" style="color:#6F251B;"></i>
                     <a href="">Mentor Information</a></li>
             </ul>
@@ -215,12 +217,12 @@
                         <table id="studentTable">
                             <thead>
                                 <tr>
-                                    <th style="width: 29%;">Unit Name</th>
-                                    <th>Unit Code</th>
-                                    <th>Course</th>
-                                    <th>Year Offered</th>
-                                    <th>Semester Offered</th>
-                                    <th style="width: 20%;">Actions</th>
+                                    <th style="width: 15%;">Unit Name</th>
+                                    <th style="width: 10%;">Unit Code</th>
+                                    <th style="width: 10%;">Course</th>
+                                    <th style="width: 10%;">Year Offered</th>
+                                    <th style="width: 10%;">Semester Offered</th>
+                                    <th style="width: 5%;">Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -232,12 +234,11 @@
                                         <td>{{ unit.year_offered }}</td>
                                         <td>{{ unit.semester_offered }}</td>
                                         <td>
-                                            <button type="button" class="view-grades-btn" onclick="">
-                                                <i class="fa-solid fa-book" style="color:#ccc;"></i> Grades
-                                            </button>                                            
-                                            <button type="button" class="view-attendance-btn" onclick="window.location.href='{{ url_for('main.student_attendance', unit_id=unit.id) }}'">
-                                                <i class="fa-solid fa-book" style="color:#ccc;"></i> Attendance
-                                            </button>                                            
+                                            <a href="{{ url_for('main.editattendance', unit_id=unit.unit_id) }}">
+                                                <button type="button" class="view-grades-btn">
+                                                    <i class="fa-regular fa-pen-to-square" style="color:#ccc;"></i> Edit Attendance
+                                                </button>
+                                            </a>                                            
                                         </td>
                                     </tr>
                                 {% else %}
@@ -250,40 +251,6 @@
                     </div> 
                 </div>
             </div>
-                <div id="" class="modal">
-                    <div class="modal-content">
-                        <span class="close" onclick="closeModal()">&times;</span>
-                        <h3>Register for Unit</h3>
-                        <form action="" method="POST">
-                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                            <input type="hidden" name="student_id" value="">
-                            <input type="hidden" name="unit_id" value="">
-
-                            <div>
-                                <label for="admission_number">Admission Number:</label>
-                                <input type="text" id="admission_number" name="admission_number" value="" readonly>
-                            </div>
-                            
-                            <div>
-                                <label for="unit_name">Unit Name:</label>
-                                <input type="text" id="unit_name" name="unit_name" value="" readonly>
-                            </div>
-                            
-                            <div>
-                                <label for="unit_code">Unit Code:</label>
-                                <input type="text" id="unit_code" name="unit_code" value="" readonly>
-                            </div>
-                            
-                            <div>
-                                <select name="registration_status" hidden>
-                                    <option value="">Select Registration Status</option>
-                                    <option value="1" selected>Register</option>
-                                    <option value="2">Unregister</option>
-                                </select>
-                            </div>
-
-                            <button type="submit">Submit</button>
-                        </form>
                     </div>
                 </div>
             <footer>
