Managed to finish attendance and grades

--- a/app/templates/LecturerModule/InProgressUnits.html
+++ b/app/templates/LecturerModule/InProgressUnits.html
@@ -189,6 +189,10 @@
                     <a href="{{url_for('main.lecregunits')}}">Register Units</a></li>
                 <li><i class="fa-brands fa-flipboard" style="color:#6F251B;"></i>    
                     <a href="{{ url_for('main.inprogressunitslec') }}">In Progress Units</a></li>
+                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i>
+                    <a href="{{url_for('main.viewattendanceunits')}}">Manage Attendance</a></li>
+                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i>
+                    <a href="{{url_for('main.viewgradesunits')}}">Manage Grades</a></li>
                 <li><i class="fa-solid fa-person" style="color:#6F251B;"></i>
                     <a href="">Mentor Information</a></li>
             </ul>
