--- a/app/templates/LecturerModule/ViewAttendanceUnits.html
+++ b/app/templates/LecturerModule/ViewAttendanceUnits.html
@@ -191,6 +191,8 @@
                     <a href="{{ url_for('main.inprogressunitslec') }}">In Progress Units</a></li>
                 <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i>
                     <a href="{{url_for('main.viewattendanceunits')}}">Manage Attendance</a></li>
+                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i>
+                    <a href="{{url_for('main.viewgradesunits')}}">Manage Grades</a></li>
                 <li><i class="fa-solid fa-person" style="color:#6F251B;"></i>
                     <a href="">Mentor Information</a></li>
             </ul>
